Fix layout issues

--- a/src/styles/kreuzberg.module.css
+++ b/src/styles/kreuzberg.module.css
@@ -1,5 +1,5 @@
 .main {
-    min-height: 100vw;
+    min-height: 100vh;
     padding: 10% 20%;
     background: #FFFDF4;
 }
